# back/central-reserve/internal/infra/primary/http2/docs/swagger.json
@@ -75,14 +75,14 @@
                 }
             }
         },
-        "/auth/users/{user_id}/roles-permissions": {
+        "/auth/roles-permissions": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "Obtiene los roles y permisos de un usuario específico",
+                "description": "Obtiene los roles y permisos del usuario autenticado",
                 "consumes": [
                     "application/json"
                 ],
@@ -93,15 +93,6 @@
                     "Auth"
                 ],
                 "summary": "Obtener roles y permisos del usuario",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "ID del usuario",
-                        "name": "user_id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "Roles y permisos obtenidos exitosamente",
@@ -109,20 +100,8 @@
                             "$ref": "#/definitions/response.UserRolesPermissionsSuccessResponse"
                         }
                     },
-                    "400": {
-                        "description": "ID de usuario inválido",
-                        "schema": {
-                            "$ref": "#/definitions/response.LoginErrorResponse"
-                        }
-                    },
                     "401": {
                         "description": "Token de acceso requerido",
-                        "schema": {
-                            "$ref": "#/definitions/response.LoginErrorResponse"
-                        }
-                    },
-                    "403": {
-                        "description": "Acceso denegado",
                         "schema": {
                             "$ref": "#/definitions/response.LoginErrorResponse"
                         }
@@ -962,6 +941,9 @@
             "properties": {
                 "business_id": {
                     "type": "integer"
+                },
+                "dni": {
+                    "type": "string"
                 },
                 "email": {
                     "type": "string"
